--- a/example/hellow world/index.html
+++ b/example/hellow world/index.html
@@ -6,6 +6,7 @@
     <title>hello world</title>
 </head>
 <body>
+    <div id="app"></div>
     <script src="main.js" type="moudule"></script>
 </body>
 </html>
