✨第十八回: 初始化 element 主流程 (example: hello world!)

--- a/example/hellow world/index.html
+++ b/example/hellow world/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>hello world</title>
+    <style>
+        .red {
+             color: red;
+        }
+        .green {
+            color: greenyellow;
+        }
+    </style>
 </head>
 <body>
     <div id="app"></div>
-    <script src="main.js" type="moudule"></script>
+    <script src="main.js" type="module"></script>
 </body>
 </html>
